[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Missoes.gd" type="Script" id=1]

[node name="Missoes" type="Node2D"]
script = ExtResource( 1 )

[node name="Voltar" type="ToolButton" parent="."]
margin_right = 12.0
margin_bottom = 22.0
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Missoes" type="Label" parent="."]
margin_left = 274.977
margin_top = 26.0294
margin_right = 330.977
margin_bottom = 40.0294
text = "MISSOES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissaofogoDescricao" type="Label" parent="Missoes"]
margin_left = -262.296
margin_top = 64.0723
margin_right = -120.296
margin_bottom = 78.0723
text = "Coletar almas de fogo:"

[node name="MissaofogoTotal" type="Label" parent="Missoes"]
margin_left = -116.798
margin_top = 65.4072
margin_right = -76.7985
margin_bottom = 79.4072
text = "0/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissaofogoNivel" type="Label" parent="Missoes"]
margin_left = -261.629
margin_top = 45.3846
margin_right = -216.629
margin_bottom = 59.3846
text = "Nivel 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissaoaguaDescricao" type="Label" parent="Missoes"]
margin_left = -264.966
margin_top = 125.475
margin_right = -122.966
margin_bottom = 139.475
text = "Coletar almas de agua:"

[node name="MissaoaguaTotal" type="Label" parent="Missoes"]
margin_left = -118.801
margin_top = 127.477
margin_right = -78.8007
margin_bottom = 141.477
text = "0/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissaoaguaNivel" type="Label" parent="Missoes"]
margin_left = -264.298
margin_top = 107.455
margin_right = -211.298
margin_bottom = 121.455
text = "Nivel 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissaoterraDescricao" type="Label" parent="Missoes"]
margin_left = -266.968
margin_top = 192.217
margin_right = -124.968
margin_bottom = 206.217
text = "Coletar almas de terra:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissaoterraTotal" type="Label" parent="Missoes"]
margin_left = -121.47
margin_top = 193.552
margin_right = -81.4704
margin_bottom = 207.552
text = "0/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissaoterraNivel" type="Label" parent="Missoes"]
margin_left = -266.301
margin_top = 173.529
margin_right = -221.301
margin_bottom = 187.529
text = "Nivel 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissaoarDescricao" type="Label" parent="Missoes"]
margin_left = -267.635
margin_top = 260.294
margin_right = -125.635
margin_bottom = 274.294
text = "Coletar almas de ar:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissaoarTotal" type="Label" parent="Missoes"]
margin_left = -136.821
margin_top = 260.294
margin_right = -96.821
margin_bottom = 274.294
text = "0/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissaoarNivel" type="Label" parent="Missoes"]
margin_left = -266.968
margin_top = 241.606
margin_right = -221.968
margin_bottom = 255.606
text = "Nivel 10"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Voltar" to="." method="_on_Voltar_button_down"]
